--- a/notemate-frontend/index.html
+++ b/notemate-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./src/assets/note-taking.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Notemate &mdash; store and organize your study notes securely</title>
   </head>
